--- a/package.json
+++ b/package.json
@@ -29,20 +29,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "4.0.0",
     "postcss": "^8",
-    "prettier": "2.8.8",
-    "prettier-eslint": "^16.3.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.0",
     "rehype-slug": "^6.0.0",
